--- a/src/components/FixedSideNav.scss
+++ b/src/components/FixedSideNav.scss
@@ -25,7 +25,7 @@ $color1: #ff9900;
 
 /* When you mouse over the navigation links, change their color */
 .fixed-side-nav a:hover {
-  color: orange;
+  color: $color1;
 }
 
 
@@ -34,12 +34,10 @@ $color1: #ff9900;
   padding: 50px;
   background-color: $color1;
   max-width: 320px;
+  margin-bottom: 20px;
 }
 
-.social-icons {
-  color: white;
-  font-size: 3rem;
-}
+
 
 
 
