--- a/src/components/MobileNav.scss
+++ b/src/components/MobileNav.scss
@@ -1,3 +1,5 @@
+$color1: #ff9900;
+
 .mobile-nav {
   height: 100%;
   background: rgba(black, 0.9);
@@ -6,7 +8,7 @@
   right: 0;
   width: 100%;
   z-index: 200;
-  transform: translateY(-100%);
+  transform: translateY(-200%);
   // transition: transform 0.1s ease-in;
 }
 
@@ -15,6 +17,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
 }
 
 /* The navigation menu links */
@@ -31,10 +34,15 @@
 /* When you mouse over the navigation links, change their color */
 .mobile-nav a:hover,
 .mobile-nav a:active {
-  color: orange;
+  color: $color1;
 }
 
-
+svg#mobile-nav-logo {
+  padding: 2rem;
+  fill: $color1;
+  max-width: 19rem;
+  margin: 0 auto;
+}
 
 // MEDIA QUERIES ////////////////////////////////////////////////////////////////////////////
 
@@ -46,7 +54,6 @@
   display: none;
   }
 
-  .mobile-nav.open {
-  display: none;
-  }
+
+
 }
