--- a/src/components/Photos.scss
+++ b/src/components/Photos.scss
@@ -6,10 +6,11 @@
   padding: 0 4px;
 }
 
-/* Create four equal columns that sits next to each other */
+/* Create three equal columns that sits next to each other */
+// all sizes above 801px
 .column {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
+  -ms-flex: 33.3%; /* IE10 */
+  flex: 33.3%;
   max-width: 33.3%;
   padding: 0 4px;
 }
@@ -21,7 +22,8 @@
 }
 
 /* Responsive layout - makes a two column-layout instead of three columns */
-@media screen and (max-width: 800px) {
+// between 601px and 800px
+@media (max-width: 800px) {
   .column {
     -ms-flex: 50%;
     flex: 50%;
@@ -30,7 +32,8 @@
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+// 600px and below
+@media (max-width: 600px) {
   .column {
     -ms-flex: 100%;
     flex: 100%;
