--- a/src/components/MobileNav.scss
+++ b/src/components/MobileNav.scss
@@ -22,7 +22,7 @@ $color1: #ff9900;
 
 /* The navigation menu links */
 .mobile-nav a {
-  padding: 6px 8px 6px 16px;
+  padding: 2px 0px;
   text-align: center;
   text-decoration: none;
   font-size: 25px;
@@ -38,7 +38,7 @@ $color1: #ff9900;
 }
 
 svg#mobile-nav-logo {
-  padding: 2rem;
+  padding: 1.5rem;
   fill: $color1;
   max-width: 19rem;
   margin: 0 auto;
@@ -53,7 +53,38 @@ svg#mobile-nav-logo {
   .mobile-nav {
   display: none;
   }
+}
+
+
+/* if you are below 1024px then this will happen */
+@media (max-width: 1024px) {
+}
 
 
 
+// between 601px and 800px (ipads)
+@media (max-width: 800px) {
+}
+
+// between 321px and 600px (phones)
+@media (max-width: 600px) {
+  svg#mobile-nav-logo {
+    max-width: 12rem;
+    padding: 0rem;
+    margin-bottom: 1rem;
+  }
+
+  .mobile-nav a {
+    padding: 2px 0px;
+
+  }
+}
+
+
+// 320px and below (phones)
+@media (max-width: 320px) {
+  svg#mobile-nav-logo {
+    max-width: 10rem;
+    padding: 0rem;
+  }
 }
