--- a/src/components/LandingPage.scss
+++ b/src/components/LandingPage.scss
@@ -1,25 +1,42 @@
 $color1: #ff9900;
 
+// .landingPage-container {
+//   height: 100%;
+// }
+
+
+
 #landing-image {
   width: 100%;
   margin-bottom: -7px;
 }
 
 
-.venues-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  list-style: none;
 
+
+
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+/* Below 1024px */
+@media (max-width: 1024px) {
 
 }
 
-.venues {
-  padding: 10px;
-  min-width: 100px;
-  width: 150px;
-  height: 150px;
-  margin: 5px;
+
+// between 601px and 800px (ipads)
+@media (max-width: 800px) {
+
+}
+
+// between 321px and 600px (mid - phones)
+@media (max-width: 600px) {
+
+}
+
+
+// 320px and below (small - phones)
+@media (max-width: 320px) {
+
+
 }
