--- a/src/components/Photos.scss
+++ b/src/components/Photos.scss
@@ -1,3 +1,4 @@
+
 .row {
   display: -ms-flexbox; /* IE10 */
   display: flex;
@@ -19,6 +20,11 @@
   margin-top: 8px;
   vertical-align: middle;
   width: 100%;
+
+}
+
+.column div img {
+  border: 3px solid #ff9900;
 }
 
 /* Responsive layout - makes a two column-layout instead of three columns */
@@ -34,9 +40,13 @@
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 // 600px and below
 @media (max-width: 600px) {
+  .row {
+    padding: 0;
+  }
   .column {
     -ms-flex: 100%;
     flex: 100%;
     max-width: 100%;
+    padding: 0;
   }
 }
