--- a/src/style.scss
+++ b/src/style.scss
@@ -89,6 +89,13 @@ main {
     font-size: 20px;
   }
 
+  th, td, p {
+    font-size: 15px;
+  }
+
+  ul li {
+    font-size: 15px;
+  }
 }
 
 
@@ -104,6 +111,10 @@ main {
   }
 
   ul li {
+    font-size: 15px;
+  }
+
+  th, td {
     font-size: 15px;
   }
 
