error with testimonials text

--- a/src/style.scss
+++ b/src/style.scss
@@ -8,7 +8,7 @@ $color1: #ff9900;
 
 
 * {
-  font-family: 'Shrikhand', cursive;
+  font-family: 'Shrikhand', sans-serif;
   box-sizing: border-box;
   margin:0;
   padding: 0;
