added email button

--- a/src/components/BookingInfo.scss
+++ b/src/components/BookingInfo.scss
@@ -14,6 +14,37 @@ hr {
   background-color: $color1;
 }
 
+#email-now-button {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  background-color: $color1;
+  display: block;
+  text-align: center;
+  padding: 10px;
+  width: 192px;
+  margin: 0 auto;
+  border: 1px solid black;
+  font-size: 17px;
+
+  /* visited link */
+  &:visited {
+    color: black;
+  }
+
+  /* mouse over link */
+  &:hover {
+    color: white;
+    background-color: black;
+    border: 1px solid $color1;
+  }
+
+
+}
+
+
+
+
 
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
