adjusted email button size on smaller screens

--- a/src/components/BookingInfo.scss
+++ b/src/components/BookingInfo.scss
@@ -64,7 +64,12 @@ hr {
   #email-address {
     margin: 6px;
     font-size: 21px;
+  }
 
+  #email-now-button {
+    font-size: 15px;
+    width: 140px;
+    padding: 6px;
   }
 
 }
